# BattleTanksGame

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
res/: resources.json
res/shaders/: basic.frag  basic.vert  sprite.frag  sprite.vert
src/: main.cpp
src/Game/: Game.cpp  Game.h  Level.cpp  Level.h  Tank.cpp  Tank.h
src/Game/GameObjects/: Border.cpp  Border.h  BrickWall.cpp  BrickWall.h  Bullet.cpp  Bullet.h  ConcreteWall.cpp  ConcreteWall.h  Eagle.cpp  Eagle.h  IGameObject.cpp  IGameObject.h  Ice.cpp  Ice.h  Tank.cpp  Tank.h  Trees.cpp  Trees.h  Water.cpp  Water.h
src/Physics/: PhysicsEngine.cpp  PhysicsEngine.h
src/Renderer/: AnimatedSprite.cpp  AnimatedSprite.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  SpriteAnimator.cpp  SpriteAnimator.h  Texture2D.cpp  Texture2D.h  VertexBuffer.cpp  VertexBuffer.h
src/Resources/: ResourceManager.cpp  ResourceManager.h  stb_image.h
src/System/: CommonDefGPU.h  Timer.cpp  Timer.h
src/System/Utils/: IndexBuffer.cpp  IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp
src/Utils/: IndexBuffer.cpp  IndexBuffer.h  ShaderHelper.cpp  ShaderHelper.h  VertexArray.cpp  VertexArray.h  VertexBufferLayout.h
